# veem-invoice-ai-refactor

./: .gitignore  Dockerfile  LICENSE  README.md  smithery.yaml
apps/custapp-agent/: README.md  package.json  tsconfig.json
apps/custapp-agent/src/: index.ts
apps/custapp-agent/src/mcp/: client.ts
apps/invoice-mcp-server/: README.md  mcp.json  pyproject.toml
apps/invoice-mcp-server/src/veem_invoice_mcp/: config.py  logging.py  mcp_app.py  runtime.py  server.py
apps/invoice-mcp-server/src/veem_invoice_mcp/adapters/stores/: mysql_history_store.py  sqlite_schedule_store.py
apps/invoice-mcp-server/src/veem_invoice_mcp/adapters/veem_api/: __init__.py  client.py  models.py
apps/invoice-mcp-server/src/veem_invoice_mcp/domain/common/: errors.py  responses.py
apps/invoice-mcp-server/src/veem_invoice_mcp/domain/invoice/: extractor.py  models.py  tools.py
apps/invoice-mcp-server/src/veem_invoice_mcp/domain/payments/: models.py  tools.py  workflow.py
apps/invoice-mcp-server/tests/: conftest.py
apps/invoice-mcp-server/tests/contract/: test_tool_schemas.py
apps/invoice-mcp-server/tests/e2e/: test_invoice_to_submit_flow.py
apps/invoice-mcp-server/tests/integration/: test_mcp_protocol_smoke.py  test_tools_smoke.py
apps/invoice-mcp-server/tests/unit/: test_payment_command_parser.py  test_prepare_payment_inference.py
legacy/: README.md
legacy/original_src/: PROJECT_STRUCTURE.md  Procfile  README.md  application.py  requirements.txt  websocket_client.html  websocket_client_auto.html  websocket_client_gpt.html
legacy/original_src/.elasticbeanstalk/: config.yml
(+25 files in other folders)
