[project]
name = "veem-invoice-mcp"
version = "0.1.0"
description = "Veem Invoice AI MCP server (workflow tools)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mcp[cli]>=1.0.0",
  "pydantic>=2.5.0",
  "python-dotenv>=1.0.0",
  "httpx>=0.27.0",
  "tenacity>=8.2.0",
  "openai>=1.40.0",
  "pypdf>=4.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "respx>=0.21.0",
  "freezegun>=1.5.0",
  "ruff>=0.5.0",
]

[project.scripts]
veem-invoice-mcp = "veem_invoice_mcp.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
